[package]
name = "sven_coop_hook"
version = "0.1.0"
authors = ["rkr35"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "unwind"
debug = true

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
debug = true

[features]
#default = ["single_thread_verifier"]
default = []
single_thread_verifier = ["once_cell"]

[build-dependencies]
bindgen = "0.53"

[dependencies]
log = "0.4"
once_cell = { version = "1.4", optional = true }
simplelog = "0.7"
rustc-hash = { version = "1.1", default-features = false }
sven_coop_hook_macros = { path = "macros" }
thiserror = "1.0"
ultraviolet = "0.4"
wchar = "0.6"
winapi = { version = "0.3", features = [
    "consoleapi",
    "errhandlingapi",
    "libloaderapi",
    "memoryapi",
    "minwindef",
    "processthreadsapi",
    "psapi",
    "synchapi",
    "wincon",
    "winnt",
    "winuser",
]}