[package]
name = "sven_coop_hook"
version = "0.1.0"
authors = ["rkr35"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = true
incremental = false
lto = "fat"
panic = "abort"

[features]
#default = ["single_thread_verifier"]
default = []
single_thread_verifier = []

[build-dependencies]
bindgen = "0.53"

[dependencies]
bstr = "0.2"
detours-sys = { git = "https://github.com/rkr35/detours" }
log = "0.4"
once_cell = { version = "1.4" }
rustc-hash = { version = "1.1", default-features = false }
simplelog = "0.7"
static_assertions = "1.1"
sven_coop_hook_macros = { path = "macros" }
thiserror = "1.0"
ultraviolet = "0.4"
wchar = "0.6"
winapi = { version = "0.3", features = [
    "consoleapi",
    "errhandlingapi",
    "libloaderapi",
    "memoryapi",
    "minwindef",
    "processthreadsapi",
    "psapi",
    "synchapi",
    "wincon",
    "winnt",
    "winuser",
]}